--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,7 @@ android-coreKtx = "androidx.core:core-ktx:1.10.1"
 android-hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 android-hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 android-hilt-navigation-compose = "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"
-android-hilt-androidx-compiler = "androidx.hilt:hilt-compiler:1.0.0"
+android-hilt-androidx-compiler = "androidx.hilt:hilt-compiler:1.1.0-beta01"
 android-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 android-material = "com.google.android.material:material:1.9.0"
 android-test-compose = { group = "androidx.compose.ui", name = "ui-test-junit4" }
